Define project colors

--- a/_static/assets/sass/_colors.scss
+++ b/_static/assets/sass/_colors.scss
@@ -1,2 +1,11 @@
+// generic colors
+
 $highlight-bg: rgba(197,17,74,0.25);
 $placeholder-color: rgba(#000,0.45);
+
+
+// project colors
+
+$purple-primary: #914d6f;
+$purple-secondary: #945273;
+$rose-gold: #d89f8b;
