--- a/_static/assets/sass/_utilities.scss
+++ b/_static/assets/sass/_utilities.scss
@@ -20,6 +20,14 @@
 	overflow: hidden;
 }
 
+sub {
+	position: relative;
+	bottom: -5px; 
+	left: -1px; 
+	opacity: 0.75; 
+	font-size: 85%; 
+}
+
 
 /* Positioning */
 
