--- a/_static/assets/sass/_colors.scss
+++ b/_static/assets/sass/_colors.scss
@@ -1,7 +1,7 @@
 // generic colors
 
 $highlight-bg: rgba(197,17,74,0.25);
-$placeholder-color: rgba(#000,0.45);
+$placeholder-color: rgba(#fff,0.45);
 
 
 // project colors
