--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -37,15 +37,81 @@ body {
 
 // Masthead
 
-.top {
-	height: 88px;
-}
+.top { height: 88px; }
 
 	.logo {
 		display: inline-block;
 		width: 170px;
 		height: 88px;
 		background: image-url('logo.png');
+	}
+
+
+// Prompt
+
+.prompt {
+	background-color: $purple-secondary;
+	background-image: image-url('prompt-bg.jpg');
+	color: #fff;
+	font-size: 23px;
+
+	.wrap { padding: 120px 0 114px; }
+
+	select {
+		background: transparent image-url('arrow-down.png') right center no-repeat;
+		border: none;
+		border-bottom: 2px solid rgba(#fff,0.5);
+		@include border-radius(0);
+		@include appearance(none);
+		color: #fdff8a;;
+		font-size: 18px;
+		font-family: "Source Sans Pro", sans-serif;
+		padding: 0 30px 4px 3px;
+		text-transform: uppercase;
+		cursor: pointer;
+	}
+
+	input[type="number"] {
+		background: transparent;
+		border: none;
+		border-bottom: 2px solid rgba(#fff,0.5);
+		@include border-radius(0);
+		@include appearance(none);
+		color: #fdff8a;
+		font-size: 18px;
+		font-family: "Source Sans Pro", sans-serif;
+		padding: 0 4px 4px;
+	}
+
+	input[type="number"]:focus { border-color: rgba(#fff,0.85); }
+
+	p {
+		margin-bottom: 40px;
+
+		&:last-child { margin-bottom: 0;}
+	}
+
+	.currency {
+		font-size: 80%;
+		opacity: 0.5;
+		margin-left: -50px;
+	}
+}
+
+	.compare {
+		display: inline-block;
+		text-transform: uppercase;
+		padding: 7px 48px;
+		border: 2px solid rgba(#fff,0.5);
+		font-size: 18px;
+		color: #fff;
+		font-weight: 600;
+		background: rgba(#000,0.1);
+
+		&:hover {
+			border-color: rgba(#fff,0.75);
+			background: rgba(#000,0.25);			
+		}
 	}
 
 
@@ -56,13 +122,9 @@ body {
 	color: rgba(#fff,0.9);
 	font-size: 15px;
 
-	.wrap {
-		padding: 52px 0 62px;
-	}
+	.wrap { padding: 52px 0 62px; }
 
-	.inner {
-		padding-right: 10%;
-	}
+	.inner { padding-right: 10%; }
 
 	h3 {
 		color: #fff;
