Add flexbox to utilities

--- a/_static/assets/sass/_utilities.scss
+++ b/_static/assets/sass/_utilities.scss
@@ -54,6 +54,7 @@ sub {
 .boxfix		{ @include box-sizing(border-box); }
 .block		{ display: block; }
 .iblock		{ display: inline-block; }
+.flex		{ @include display-flex; }
 
 
 /* Visibility + State */
