Add summary output markup and styles

--- a/_static/assets/sass/_colors.scss
+++ b/_static/assets/sass/_colors.scss
@@ -9,3 +9,4 @@ $placeholder-color: rgba(#fff,0.45);
 $purple-primary: #914d6f;
 $purple-secondary: #945273;
 $rose-gold: #d89f8b;
+$rose-gold-secondary: #eadce3;
