--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -115,6 +115,58 @@ body {
 	}
 
 
+// Output
+
+.static {
+	border-bottom: 1px solid $rose-gold-secondary;
+}
+
+.side-col {
+	width: 250px;
+	padding: 50px 0;
+	color: $purple-secondary;
+	text-transform: uppercase;
+	font-size: 16px;
+	border-right: 1px solid $rose-gold-secondary;
+
+	.inner {
+		padding-right: 30px;
+
+		.static & {
+			text-align: right;
+		}
+	}
+}
+
+	#output-budget{
+		display: inline-block;
+	}
+
+	#output-budget {
+		font-size: 22px;
+		font-weight: 700;
+		padding: 5px 10px 5px 20px;
+		background: rgba($purple-primary, 0.2);
+		margin: 5px 0 15px;
+	}
+
+	#output-units {
+		display: block;
+		font-size: 28px;
+		font-weight: 700;
+		padding: 5px 0 3px 20px;
+		color: rgb(144, 222, 85);
+		border-bottom: 2px solid rgb(144, 222, 85);
+		margin: 10px 0 5px;
+	}
+
+.main-col {
+}
+
+.side-col { @include flex(0 0 250px); }
+.main-col { @include flex(1); }
+
+
 // Footer
 
 .bottom {
