Add dynamic JavaScript
@andkamau, instructions are on line 146 & 147 of index.html

--- a/_static/assets/sass/_colors.scss
+++ b/_static/assets/sass/_colors.scss
@@ -10,3 +10,4 @@ $purple-primary: #914d6f;
 $purple-secondary: #945273;
 $rose-gold: #d89f8b;
 $rose-gold-secondary: #eadce3;
+$input-yellow: #fdff8a;
