--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -142,10 +142,10 @@ body {
 
 .side-col {
 	width: 250px;
-	padding: 50px 0;
+	padding: 30px 0;
 	color: $purple-secondary;
 	text-transform: uppercase;
-	font-size: 16px;
+	font-size: 14px;
 	border-right: 1px solid $rose-gold-secondary;
 
 	.inner {
@@ -163,14 +163,12 @@ body {
 
 	#output-budget{
 		display: inline-block;
-	}
-
-	#output-budget {
-		font-size: 22px;
+		text-transform: none;
+		font-size: 32px;
 		font-weight: 700;
-		padding: 5px 10px 5px 20px;
-		background: rgba($purple-primary, 0.2);
-		margin: 5px 0 15px;
+		// padding: 5px 10px 5px 20px;
+		// background: rgba($purple-primary, 0.2);
+		margin: 2px 0 10px;
 	}
 
 	#output-comparison {
@@ -180,7 +178,7 @@ body {
 		padding: 5px 0 3px 20px;
 		color: rgb(144, 222, 85);
 		border-bottom: 2px solid rgb(144, 222, 85);
-		margin: 10px 0 5px;
+		margin: 5px 0 5px;
 	}
 
 	.controls {
