Add social sharing div in top bar

--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -55,6 +55,11 @@ body {
 		background: image-url('logo.png');
 	}
 
+	.social-sharing {
+		float: right;
+		padding-top: 35px;
+	}
+
 
 // Prompt
 
