Better labels, partial updated color scheme

--- a/_static/assets/sass/_colors.scss
+++ b/_static/assets/sass/_colors.scss
@@ -11,3 +11,6 @@ $purple-secondary: #945273;
 $rose-gold: #d89f8b;
 $rose-gold-secondary: #eadce3;
 $input-yellow: #fdff8a;
+
+$blue-primary: #4d7591;
+$blue-secondary: #81c0de;
