--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -162,23 +162,23 @@ body {
 }
 
 .static {
-	border-bottom: 1px solid $rose-gold-secondary;
+	border-bottom: 1px solid rgba($blue-primary, 0.2);
 }
 
 .side-col {
 	width: 250px;
 	padding: 30px 0;
-	color: $purple-secondary;
+	color: $blue-primary;
 	text-transform: uppercase;
 	font-size: 14px;
-	border-right: 1px solid $rose-gold-secondary;
+	border-right: 1px solid rgba($blue-primary, 0.2);
 
 	.inner {
 		padding-right: 30px;
 		padding-bottom: 20px;
 
 		&:first-child {
-			border-bottom: 1px solid $rose-gold-secondary;
+			border-bottom: 1px solid rgba($blue-primary, 0.2);
 		}
 
 		.static & {
@@ -197,7 +197,7 @@ body {
 		font-size: 32px;
 		font-weight: 700;
 		// padding: 5px 10px 5px 20px;
-		// background: rgba($purple-primary, 0.2);
+		// background: rgba($blue-primary, 0.2);
 		margin: 2px 0 10px;
 		color: $blue-primary;
 	}
@@ -253,27 +253,27 @@ body {
 
 	.icon-row {
 		position: relative;
-		border-bottom: 1px solid $rose-gold-secondary;
+		border-bottom: 1px solid rgba($blue-primary, 0.2);
 		width: 33.33%;
 		float: left;
 
 		> div {
-			border-left: 1px solid $rose-gold-secondary;
+			border-left: 1px solid rgba($blue-primary, 0.2);
 		}
 
-		&:first-child > div {
+		&:nth-child(2) > div {
 			border-left: none;
 		}
 	}
 
 	.dynamic-chart {
-		border-top: 1px solid $rose-gold-secondary;
+		border-top: 1px solid rgba($blue-primary, 0.2);
 		position: relative;
 
 		&:after {
 			height: 1px;
 			width: 100%;
-			background: $rose-gold-secondary;
+			background: rgba($blue-primary, 0.2);
 			left: 100%;
 			bottom: 100%;
 		}
@@ -310,7 +310,7 @@ body {
 		padding: 25px 10% 15px;
 		font-size: 40px;
 		text-align: center;
-		color: $purple-primary;
+		color: $blue-primary;
 		font-weight: 700;
 		line-height: 1;
 
@@ -322,7 +322,7 @@ body {
 			position: absolute;
 			left: -54px;
 			top: 10px;
-			background: $rose-gold-secondary;
+			background: #d3dde4;
 			padding: 5px 12px;
 			@include border-radius(40px);
 		}
@@ -344,10 +344,10 @@ body {
 	.icon-legend {
 		position: relative;
 		padding: 10px 45px 25px;
-		color: $purple-secondary;
+		color: $blue-primary;
 		text-transform: uppercase;
 		font-size: 16px;
-		border-top: 1px solid $rose-gold-secondary;
+		border-top: 1px solid rgba($blue-primary, 0.2);
 
 		i {
 			position: relative;
@@ -389,11 +389,13 @@ body {
 .bottom {
 	background: #81c0de;
 	color: rgba(#fff,0.9);
-	font-size: 15px;
+	font-size: 19px;
 
 	.wrap { padding: 52px 0 62px; }
 
 	.inner { padding-right: 10%; }
+
+	.two-thirds { padding-top: 30px;}
 
 	h3 {
 		color: #fff;
@@ -408,6 +410,26 @@ body {
 
 		&:hover {
 			border-bottom: 1px dotted;
+		}
+	}
+
+	.footer-logo {
+		display: inline-block;
+		height: 85px;
+
+		&:hover {
+			border-bottom: none;
+			@include transform(scale(0.975));
+		}
+
+		&.cfk {
+			width: 182px;
+			background: image-url('logo-cfk.png') no-repeat;
+		}
+		&.hivos {
+			margin-left: 50px;
+			width: 140px;
+			background: image-url('logo-hivos.png') no-repeat;
 		}
 	}
 }
