immutable camparisons added

--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -372,6 +372,7 @@ body {
 		&.cupcake 	{ background-image: image-url('icon-cupcake.png'); }
 		&.fee 	{ background-image: image-url('icon-fee.png'); }
 		&.commute 	{ background-image: image-url('icon-commute.png'); }
+		&.maize 	{ background-image: image-url('icon-maize.png'); }
 	}
 
 	#output-soda-ratio,
