--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -373,6 +373,7 @@ body {
 		&.fee 	{ background-image: image-url('icon-fee.png'); }
 		&.commute 	{ background-image: image-url('icon-commute.png'); }
 		&.maize 	{ background-image: image-url('icon-maize.png'); }
+		&.dialysis 	{ background-image: image-url('icon-house.png'); }
 	}
 
 	#output-soda-ratio,
