--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -385,6 +385,25 @@ body {
 .side-col { @include flex(0 0 250px); }
 .main-col { @include flex(1); }
 
+.news-box {
+    width:25%;
+    display: inline-block;
+    float:left;
+}
+.news-box a {
+    display:block;
+    background-color:#4d7591;
+    padding:5px;
+    color:#fff;
+    font-size:12px;
+    width:60px;
+}
+.news-section {
+    background: #fff;
+    text-align:left;
+    padding:20px 0px;
+}
+
 
 // Footer
 
@@ -477,6 +496,10 @@ body {
 @media (max-width: 1240px) {
 
 	.wrap { width: 94%; }
+	.news-box {
+	    width:25%;
+	    float:left;
+	}
 
 }
 
@@ -484,6 +507,11 @@ body {
 
 	.flex .batch-count { text-align: left; padding-left: 50px; }
 	.icon-row .flex { display: block; }
+	.news-box {
+	    width:25%;
+	    float:left;
+	}
+
 
 }
 
@@ -507,6 +535,10 @@ body {
 
 	.icon-container,
 	.icon-legend { padding-left: 0; padding-right: 0; }
+	.news-box {
+	    width:100%;
+	}
+
 
 }
 
