--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -384,17 +384,19 @@ body {
 .main-col { @include flex(1); }
 
 .news-box {
-    width:25%;
+    width:23%;
     display: inline-block;
     float:left;
+    padding: 0px 10px;
 }
 .news-box span {
     display:block;
     background-color:$cfa-blue;
-    padding:0px 5px;
+    padding:10px 15px;
     color:#fff;
     font-size:12px;
-    width:60px;
+    width:33px;
+    margin-top: 10px;
 }
 .news-box a {
     color:#333;
@@ -402,6 +404,10 @@ body {
 .news-box a:hover {
     color:$blue-primary;
     cursor:pointer;
+}
+.news-box small {
+    font-weight:100;
+    font-size:18px;
 }
 .news-section {
     background: #fff;
