--- a/_static/assets/sass/_colors.scss
+++ b/_static/assets/sass/_colors.scss
@@ -10,8 +10,9 @@ $purple-primary: #914d6f;
 $purple-secondary: #945273;
 $rose-gold: #d89f8b;
 $rose-gold-secondary: #eadce3;
-$input-yellow: #fdff8a;
+$input-yellow: #D3D35B;
 
-$blue-primary: #4d7591;
-$blue-secondary: #81c0de;
+$blue-primary: #0D68A8;
+$blue-secondary: #5394C1;
 $cfa-blue: #0D68A8;
+$red: #ED1C24;
