A couple of fixes.

--- a/_static/assets/sass/_colors.scss
+++ b/_static/assets/sass/_colors.scss
@@ -6,13 +6,15 @@ $placeholder-color: rgba(#fff,0.45);
 
 // project colors
 
-$purple-primary: #914d6f;
-$purple-secondary: #945273;
-$rose-gold: #d89f8b;
-$rose-gold-secondary: #eadce3;
-$input-yellow: #D3D35B;
+
 
 $blue-primary: #0D68A8;
 $blue-secondary: #5394C1;
 $cfa-blue: #0D68A8;
 $red: #ED1C24;
+
+$purple-primary: #914d6f;
+$purple-secondary: #945273;
+$rose-gold: #d89f8b;
+$rose-gold-secondary: #eadce3;
+$input-yellow: #ffe84a;
