--- a/_static/assets/sass/_utilities.scss
+++ b/_static/assets/sass/_utilities.scss
@@ -104,8 +104,8 @@ sub {
 
 /* Selection */
 
-::-moz-selection 	{ background: $highlight-bg; color:#000; }
-::selection 		{ background: $highlight-bg; color:#000; }
+// ::-moz-selection 	{ background: $highlight-bg; color:#000; }
+// ::selection 		{ background: $highlight-bg; color:#000; }
 .no-touch input		{ outline: none; }
 
 
