--- a/_static/assets/sass/css.scss
+++ b/_static/assets/sass/css.scss
@@ -74,7 +74,6 @@ body {
 	.intro-text {
 		width: 30%;
 		font-size: 18px;
-		opacity: 1.0;
 	}
 
 	.action-box {
@@ -206,9 +205,12 @@ body {
 		font-size: 28px;
 		font-weight: 700;
 		padding: 5px 0 3px 20px;
-		color: rgb(144, 222, 85);
-		border-bottom: 2px solid rgb(144, 222, 85);
+		color: $red;
+		border-bottom: 2px solid $red;
 		margin: 5px 0 5px;
+	}
+	#output-comparison-units, #output-category {
+		color: $red;
 	}
 
 	.controls {
@@ -285,6 +287,7 @@ body {
 		font-size: 16px;
 		color: $blue-primary;
 		margin-top: -1px;
+		display: none;
 
 		&:before {
 			width: 0;
