--- a/_static/assets/sass/style.scss
+++ b/_static/assets/sass/style.scss
@@ -5,6 +5,8 @@ Author:     Code for Africa
 Author URI: https://codeforafrica.org/
 */
 
+@import "compass/css3";
+@import "compass/utilities";
 
 @import "colors";
 
@@ -21,6 +23,10 @@ html, body {
     text-decoration: underline;
     &:hover {
       color: $lightblue;
+    }
+
+    &.btn{
+      text-decoration: none;
     }
   }
 }
@@ -54,5 +60,91 @@ footer {
     }
   }
   
+}
+
+
+// Home page
+
+section.intro {
+  padding-top: 70px;
+  padding-bottom: 70px;
+
+  .intro-text {
+    p {
+      margin-bottom: 20px;
+      &:last-child {
+        margin-bottom: 0px;
+      }
+    }
+  }
+
+  select {
+    background: transparent image-url('arrow-down.png') right center no-repeat;
+    border: none;
+    border-bottom: 2px solid rgba(#fff,0.5);
+    @include border-radius(0);
+    @include appearance(none);
+    color: $input-yellow;
+    font-size: 18px;
+    font-family: "Source Sans Pro", sans-serif;
+    padding: 0 30px 4px 3px;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
+
+  input[type="number"] {
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid rgba(#fff,0.5);
+    @include border-radius(0);
+    @include appearance(none);
+    color: $input-yellow;
+    font-size: 18px;
+    font-family: "Source Sans Pro", sans-serif;
+    padding: 0 4px 4px;
+
+    &:focus { border-color: rgba(#fff,0.85); }
+    
+    &.highlight,
+    &.highlight:focus {
+      border-color: $input-yellow;
+    }
+  }
+
+  .currency {
+    font-size: 80%;
+    opacity: 0.5;
+    margin-left: -60px;
+  }
+
+  .btn {
+
+  }
+}
+
+
+section.stories {
+  background-color: #fff;
+  color: #000;
+  padding-top: 50px;
+  padding-bottom: 50px;
+
+  .page-header {
+    margin-top: 20px;
+  }
+
+  a {
+    color: #000;
+    &.btn-primary {
+      color: #fff;
+    }
+  }
+
+  h4 {
+    a {
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
 }
 
