--- a/_static/layout/base.html
+++ b/_static/layout/base.html
@@ -29,7 +29,7 @@
         <!-- Add your site or application content here -->
 
         <nav class="navbar navbar-default navbar-fixed-top">
-          <div class="container-fluid">
+          <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -50,11 +50,14 @@
                 <li><a href="#">Link</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
+          </div><!-- /.container -->
         </nav>
 
-        {% block content %}
-        {% endblock %}
+        <section class="main-content">
+            {% block content %}
+            {% endblock %}
+        </section>
+        
 
         <footer>
             <div class="container">
