--- a/_static/assets/sass/style.scss
+++ b/_static/assets/sass/style.scss
@@ -38,6 +38,14 @@ nav.navbar {
   &.navbar-default {
     background-color: #fff;
   }
+
+  ul {
+    padding-top: 12px;
+    li {
+      margin-left: 10px;
+      margin-bottom: 5px;
+    }
+  }
 }
 
 footer {
@@ -66,15 +74,11 @@ footer {
 // Home page
 
 section.intro {
-  padding-top: 70px;
-  padding-bottom: 70px;
 
-  .intro-text {
-    p {
-      margin-bottom: 20px;
-      &:last-child {
-        margin-bottom: 0px;
-      }
+  p, .lead {
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 0px;
     }
   }
 
@@ -118,12 +122,13 @@ section.intro {
   }
 
   .btn {
-
+    padding: 11px 27px 9px;
   }
 }
 
 
-section.stories {
+
+section.output, section.stories, section.story-content {
   background-color: #fff;
   color: #000;
   padding-top: 50px;
@@ -148,3 +153,237 @@ section.stories {
   }
 }
 
+
+
+section.output {
+  border-bottom: 1px solid $blue-secondary;
+}
+
+
+.output {
+  overflow: hidden;
+  display: none;
+}
+
+.side-col {
+  padding: 30px 0;
+  color: $blue-primary;
+  text-transform: uppercase;
+  font-size: 14px;
+
+  .inner {
+    padding-right: 30px;
+    padding-bottom: 20px;
+
+    .static & {
+      text-align: right;
+    }
+  }
+}
+
+  #output-county {
+    text-transform: uppercase;
+  }
+
+  #output-budget{
+    display: inline-block;
+    text-transform: none;
+    font-size: 32px;
+    font-weight: 700;
+    margin: 2px 0 10px;
+    color: $blue-primary;
+  }
+
+  #output-comparison {
+    display: block;
+    font-size: 28px;
+    font-weight: 700;
+    padding: 5px 0 3px 20px;
+    color: $red;
+    border-bottom: 2px solid $red;
+    margin: 5px 0 5px;
+  }
+  #output-comparison-units, #output-category {
+    color: $red;
+  }
+
+  .controls {
+    padding-top: 20px;
+
+    .control {
+      overflow: hidden;
+      margin-bottom: 20px;
+    }
+
+    i {
+      position: relative;
+      margin-right: 5%;
+      float: left;
+
+      &:after {
+        font-style: normal;
+        font-size: 14px;
+        top: 3px;
+        left: 100%;
+        margin-left: 40%;
+      }
+
+      &.mri:after   { content: "MRI"; }
+      &.dialysis:after  { content: "DIALYSIS "; }
+      &.malarial:after { content: "DRUGS"; }
+
+      &.mri     { background-image: image-url('icon-mri-purple.png'); }
+      &.dialysis  { background-image: image-url('icon-dialysis-purple.png'); }
+      &.malarial  { background-image: image-url('icon-malarial-purple.png'); }
+    }
+
+    input {
+      width: 77%;
+      margin-top: 25px;
+    }
+  }
+
+
+.main-col { }
+
+  .static-chart, .icon-row {
+    border-left: 1px solid $blue-secondary;
+  }
+
+  .icon-row {
+    position: relative;
+    width: 33.33%;
+    float: left;
+  }
+
+  .dynamic-chart {
+    border-top: 1px solid $blue-secondary;
+    position: relative;
+
+    &:after {
+      height: 1px;
+      width: 100%;
+      background: $blue-secondary;
+      left: 100%;
+      bottom: 100%;
+    }
+  }
+
+  .mid-desc {
+    position: relative;
+    padding: 20px 45px;
+    background: #d3dde4;
+    font-size: 16px;
+    color: $blue-primary;
+    margin-top: -1px;
+    display: none;
+
+    &:before {
+      width: 0;
+      height: 0;
+      left: 55px;
+      bottom: 100%;
+      border-bottom: 8px solid #d3dde4;
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+    }
+    &:after {
+      width: 100%;
+      height: 100%;
+      left: 100%;
+      top: 0;
+      background: #d3dde4;
+    }
+  }
+
+
+  .batch-count {
+    padding: 25px 10% 15px;
+    font-size: 40px;
+    text-align: center;
+    color: $blue-primary;
+    font-weight: 700;
+    line-height: 1;
+
+    div { position: relative; }
+
+    em {
+      font-weight: 700;
+      font-size: 70%;
+      position: absolute;
+      left: -54px;
+      top: 10px;
+      background: #d3dde4;
+      padding: 5px 12px;
+      @include border-radius(40px);
+    }
+  }
+
+    .batch-count-name {
+      font-size: 14px;
+      text-transform: uppercase;
+      font-weight: 400;
+      padding-top: 10px;
+    }
+
+  .icon-container {
+    padding: 22px 45px;
+
+    &.output-icons { min-height: 109px; }
+  }
+
+  .icon-legend {
+    position: relative;
+    padding: 10px 45px 25px;
+    color: $blue-primary;
+    text-transform: uppercase;
+    font-size: 16px;
+    border-top: 1px solid $blue-secondary;
+
+    i {
+      position: relative;
+      bottom: -10px;
+    }
+  }
+
+  i {
+    display: inline-block;;
+    width: 35px;
+    height: 40px;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 1;
+    @include transition(all 0.5s ease);
+
+    .preload & { opacity: 0; }
+
+    &.house   { background-image: image-url('icon-house.png'); }
+    &.mri     { background-image: image-url('icon-mri.png'); }
+    &.dialysis  { background-image: image-url('icon-dialysis.png'); }
+    &.malarial  { background-image: image-url('icon-malarial.png'); }
+    &.fee   { background-image: image-url('icon-fee.png'); }
+    &.commute   { background-image: image-url('icon-commute.png'); }
+    &.maize   { background-image: image-url('icon-maize.png'); }
+    &.dialysis  { background-image: image-url('icon-dialysis.png'); }
+  }
+
+  #output-mri-ratio,
+  #output-dialysis-ratio,
+  #output-malarial-ratio {
+    font-weight: 700;
+  }
+
+.side-col { @include flex(0 0 250px); }
+.main-col { @include flex(1); }
+
+
+// Story
+
+.story-headline {
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+
+.story-content {
+
+}
