Moved a bunch of things. 🏥
@andkamau is going to hate me.

--- a/bi/templates/home.html
+++ b/bi/templates/home.html
@@ -180,7 +180,7 @@
 <script type="text/javascript">
     var comparatives = "{{ comparatives|safe }}";
 </script> 
-<script src="/assets/js/main.js"></script>
+<script src="/static/js/main.js"></script>
 <script type="text/javascript">
   // extract county hospitality budget from JSON 
   // and assign it here. The rest is magic.
