--- a/bi/templates/layout/base.html
+++ b/bi/templates/layout/base.html
@@ -7,19 +7,19 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png">
-        <link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.ico">
+        <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.ico">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="/assets/css/normalize.css">
-        <link rel="stylesheet" href="/assets/css/main.css">
+        <link rel="stylesheet" href="/static/css/normalize.css">
+        <link rel="stylesheet" href="/static/css/main.css">
 
-        <link rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css" >
+        <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css" >
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet' type='text/css'>
 
-        <link rel="stylesheet" href="/assets/css/style.css" type="text/css" >
+        <link rel="stylesheet" href="/static/css/style.css" type="text/css" >
 
-        <script src="/assets/js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="/static/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="/">
-                <img alt="Brand" src="/assets/img/logo.png">
+                <img alt="Brand" src="/static/img/logo.png">
               </a>
             </div>
 
@@ -77,7 +77,7 @@
                         <p><small><strong>Biscuit Index</strong> shows how public budget data can be used to help citizens better understand how governments spend our taxmoney.</small></p>
 
                         <p><small>This site is an <strong>africanSPENDING</strong> project of <strong><a href="https://codeforkenya.org/" target="_blank">Code for Kenya</a></strong> as part of the wider ​<strong><a href="https://codeforafrica.org/" target="_blank">Code for Africa</a></strong> federation. All content is released under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons 4 Attribution license</a>. Reuse it to help empower your own community. The code is available on <strong><a href="https://github.com/CfKenya-KMP/biscuit_index" target="_blank">GitHub</a></strong> and data is available on ​<strong><a href="http://openafrica.net/" target="_blank">openAFRICA</a></strong>​.</small></p>
-           
+
                     </div>
                     <div class="col-sm-3">
                         <p style="margin-bottom: 0;">Other africanSPENDING tools:</p>
@@ -92,19 +92,19 @@
                         </ul>
                     </div>
                     <div class="col-sm-4 logos text-center">
-                        <a href="https://codeforkenya.org/" target="_blank"><img src="/assets/img/cfkenya_blue.png" /></a>
-                        <a href="http://hivos.org/" target="_blank"><img src="/assets/img/hivos.png" /></a>
+                        <a href="https://codeforkenya.org/" target="_blank"><img src="/static/img/cfkenya_white.png" /></a>
+                        <a href="http://hivos.org/" target="_blank"><img src="/static/img/hivos.png" /></a>
                     </div>
                 </div>
             </div>
             
         </footer>
 
-        <script src="/assets/js/vendor/jquery-1.12.0.min.js"></script>
+        <script src="/static/js/vendor/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="https://code.jquery.com/jquery-1.12.0.min.js"><\/script>')</script>
-        <script src="/assets/js/plugins.js"></script>
+        <script src="/static/js/plugins.js"></script>
 
-        <script src="/assets/js/bootstrap.min.js"></script>
+        <script src="/static/js/bootstrap.min.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
