--- a/bi/static/sass/style.scss
+++ b/bi/static/sass/style.scss
@@ -53,10 +53,14 @@ footer {
   padding-bottom: 30px;
 
   .logos {
-    padding-top: 30px;
+    padding-top: 0px;
     img {
-      height: 60px;
+      max-height: 60px;
       margin: 0 10px 10px;
+      max-width: 100%;
+    }
+    hr {
+      margin-top: 0px;
     }
   }
 
