--- a/bi/templates/layout/base.html
+++ b/bi/templates/layout/base.html
@@ -76,7 +76,8 @@
                     <div class="col-sm-5">
                         <p><small><strong>Biscuit Index</strong> shows how public budget data can be used to help citizens better understand how governments spend our taxmoney.</small></p>
 
-                        <p><small>This site is an <strong>africanSPENDING</strong> project of <strong><a href="https://codeforkenya.org/" target="_blank">Code for Kenya</a></strong> as part of the wider ​<strong><a href="https://codeforafrica.org/" target="_blank">Code for Africa</a></strong> federation. All content is released under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons 4 Attribution license</a>. Reuse it to help empower your own community. The code is available on <strong><a href="https://github.com/CfKenya-KMP/biscuit_index" target="_blank">GitHub</a></strong> and data is available on ​<strong><a href="http://openafrica.net/" target="_blank">openAFRICA</a></strong>​.</small></p>
+                        <p><small>This site is an <strong>africanSPENDING</strong> project of <strong><a href="https://codeforkenya.org/" target="_blank">Code for Kenya</a></strong> as part of the wider ​<strong><a href="https://codeforafrica.org/" target="_blank">Code for Africa</a></strong> federation.</small></p>
+                        <p><small>All content is released under a <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">Creative Commons 4 Attribution license</a>. Reuse it to help empower your own community. The code is available on <strong><a href="https://github.com/CfKenya-KMP/biscuit_index" target="_blank">GitHub</a></strong> and data is available on ​<strong><a href="http://openafrica.net/" target="_blank">openAFRICA</a></strong>​. Learn how to use Biscuit Index, visit our <a href="https://github.com/CfKenya-KMP/biscuit_index/wiki/Biscuit-Index">wiki.</a></small></p>
 
                     </div>
                     <div class="col-sm-3">
@@ -89,11 +90,17 @@
                         <p style="margin-bottom: 0;">Join Our Community:</p>
                         <ul>
                             <li><a href="https://facebook.com/HacksHackersAfrica" target="_blank">Hacks/Hackers Africa</a>
+                            <li><a href="https://facebook.com/CodeForAfrica" target="_blank">Code for Africa</a>
                         </ul>
                     </div>
                     <div class="col-sm-4 logos text-center">
-                        <a href="https://codeforkenya.org/" target="_blank"><img src="/static/img/cfkenya_white.png" /></a>
-                        <a href="http://hivos.org/" target="_blank"><img src="/static/img/hivos.png" /></a>
+                        <p>Publishing Partner:</p>
+                        <a href="http://nation.co.ke/" target="_blank" rel="noopener noreference"><img src="/static/img/dailynation.png" /></a>
+
+                        <p>Made Possible by:</p>
+                        <a href="https://codeforkenya.org/" target="_blank" rel="noopener noreference"><img src="/static/img/cfkenya_white.png" /></a>
+                        <a href="http://hivos.org/" target="_blank" rel="noopener noreference"><img src="/static/img/hivos_white.png" /></a>
+                        
                     </div>
                 </div>
             </div>
