Moved share buttons
Fixes #17

--- a/bi/templates/home.html
+++ b/bi/templates/home.html
@@ -62,6 +62,13 @@
               <span id="output-category">equals your Monthly Rentfor approximately</span><br/>
               <span id="output-comparison">0</span>
               <span id="output-comparison-units">people</span>
+              <br/><br/>
+              <p>
+                <a href="" id="twtbtn" class="twitter-hashtag-button" data-size="large" data-url="http://biscuitindex.codeforkenya.org">Tweet #BiscuitIndex</a>
+              </p>
+              <p>
+                <div class="fb-share-button" data-href="http://biscuitindex.codeforkenya.org/" data-layout="button" data-size="large" data-mobile-iframe="true" style="line-height:15px;"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fbiscuitindex.codeforkenya.org%2F&amp;src=sdkpreparse">Share</a></div>
+              </p>
             </div>
           </div>
         </div>
