--- a/bi/static/sass/style.scss
+++ b/bi/static/sass/style.scss
@@ -17,6 +17,7 @@ html, body {
   background-color: $blue;
   color: #fff;
   font-family: 'Poppins', sans-serif;
+  word-break: break-word;
 
   a {
     color: #fff;
