--- a/bi/templates/home.html
+++ b/bi/templates/home.html
@@ -140,7 +140,9 @@
       <div class="col-sm-4">
         <h4>
           <a href="/how-mcas-mandazi-addiction-is-killing-kenyas-poorest">How MCAs mandazi Addiction Is Killing Kenya's Poorest</a>
-        </h5>
+        </h4>
+        <div style="background-image: url('/static/img/story/story_1.jpg'); height: 100px; width: 100%; background-size: cover; background-repeat: no-repeat; background-position: top center;"></div>
+        <br/>
         <p>Kenya only has only eight fully equipped MRI facilities where you can get radiation treatment for cancer— one in each of ... </p>
         <p><a class="btn btn-sm btn-primary" href="/how-mcas-mandazi-addiction-is-killing-kenyas-poorest">READ MORE</a></p>
       </div>
@@ -148,7 +150,9 @@
       <div class="col-sm-4">
         <h4>
           <a href="/mcas-malaria-budget">What MCAs tea budget can do to help fight Malaria in their counties</a>
-        </h5>
+        </h4>
+        <div style="background-image: url('/static/img/story/story_2.jpg'); height: 100px; width: 100%; background-size: cover; background-repeat: no-repeat; background-position: center center;"></div>
+        <br/>
         <p>Eight out of every ten people are at risk of catching Malaria.  On average, a malaria-stricken family spends an estimated...</p>
         <p><a class="btn btn-sm btn-primary" href="/mcas-malaria-budget">READ MORE</a></p>
       </div>
@@ -156,7 +160,9 @@
       <div class="col-sm-4">
         <h4>
           <a href="/feeding-frenzy-as-counties-spend-millions-on-hospitality">Feeding frenzy as counties spend millions on ‘hospitality’</a>
-        </h5>
+        </h4>
+        <div style="background-image: url('/static/img/story/story_3.jpg'); height: 100px; width: 100%; background-size: cover; background-repeat: no-repeat; background-position: center center;"></div>
+        <br/>
         <p>Do you know how much your county has been spending on tea, mandazi, samosas and hot lunches for your MCAs and governors?</p>
         <p><a class="btn btn-sm btn-primary" href="/feeding-frenzy-as-counties-spend-millions-on-hospitality">READ MORE</a></p>
       </div>
@@ -165,7 +171,9 @@
       <div class="col-sm-4">
         <h4>
           <a href="/county-spending-arv">How counties spend on tea can buy ARVs for 6,000 HIV people</a>
-        </h5>
+        </h4>
+        <div style="background-image: url('/static/img/story/story_4.jpg'); height: 100px; width: 100%; background-size: cover; background-repeat: no-repeat; background-position: center center;"></div>
+        <br/>
         <p>Nearly one in three persons newly infected with HIV is a teenager or youth, aged between 15-24 years...</p>
         <p><a class="btn btn-sm btn-primary" href="/county-spending-arv">READ MORE</a></p>
       </div>
@@ -173,7 +181,9 @@
       <div class="col-sm-4">
         <h4>
           <a href="/tea-or-tb">Tea or TB wards? What MCAs tea budget can do to help TB patients.</a>
-        </h5>
+        </h4>
+        <div style="background-image: url('/static/img/story/story_5.jpg'); height: 100px; width: 100%; background-size: cover; background-repeat: no-repeat; background-position: center center;"></div>
+        <br/>
         <p>Every morning Benedicta Ayuma gives a thanksgiving prayer for her five year old son who is sick with TB. Since he was diagnosed more than eight months ago...</p>
         <p><a class="btn btn-sm btn-primary" href="/tea-or-tb">READ MORE</a></p>
       </div>
