--- a/bi/templates/story.html
+++ b/bi/templates/story.html
@@ -7,12 +7,24 @@
 
 {% block story_content %}
 
+
+
 <p>Kenya only has only eight fully equipped MRI facilities where you can get radiation treatment for cancer— one in each of the eight provincial and referral hospitals and two at the Aga Khan Hospital and Nairobi Hospital.</p>
+
 <p> These ten MRI facilities are expected to serve 44 million Kenyans. According to the Kenya Cancer Network and the World Health Organisation, there are an estimated 40,000 new Cancer cases reported every year and 28,000 deaths due to cancer annually making the disease the third leading cause of mortality. Cancer deaths account for 7 per cent of all annual deaths.</p>
+
 <p>Global standards are ten to fifteen machines per one million inhabitants. In Kenya, there is one machine for every 4.4 million people.</p>
+
 <p>Health specialists claim thousands of Kenyans who cannot afford private healthcare are dying of treatable ailments while waiting for up to a year to be scanned. If you’re really lucky, and if you make the trek to Nairobi or the other major towns, the quickest you’d get access to an MRI scan is three months.</p>
+
+<br/>
+<div style="background-image: url('/static/img/story/story_1.jpg'); height: 300px; width: 100%; background-size: cover; background-repeat: no-repeat; background-position: top center;"></div>
+<br/>
+
 <p>“Cancer does not wait until a person starts receiving treatment. This may be the reason why many Kenyans are dying of cancer because they have to wait two years," said Nyeri MP Priscilla Nyokabi two years ago when she and other women MPs visited the KNH. The situation would be greatly eased if each county was equipped with an MRI facility. As it is , only 3 out of the 47 counties had by April this year received the machines under a programme where the government is hiring the equipment for Sh38bn per year. The biggest hurdle is lack of the specially constructed building to house the equipment and the acute shortage of oncologists and other specialist health professionals.</p>
+
 <p>But that’s not all. If you need dialysis, for common ailments like chronic high blood pressure, kidney stones, or other forms kidney failure, you need to queue for up to six months or even longer,  depending on whether the machines are in working order or not.</p>
+
 <p>“We have cases where patients have been told to wait for two or three years … by which time they would be dead,” says health specialist. (get me a quote)</p>
 <p>The cost of an MRI machine, its installation and a year’s supply of cyrogens (liquid helium and liquid nitrogen) for the operation of the MRI is Sh33,534,100. A dialysis machine costs Sh2m.</p>
 <p>Could the county governments afford to buy these life-saving machines?</p>
