--- a/bi/templates/story3.html
+++ b/bi/templates/story3.html
@@ -10,7 +10,11 @@
 <p>Do you know how much your county has been spending on tea, mandazi, samosas and hot lunches for your MCAs and governors? </p>
 <p>Are you aware that the national and county governments have allocated huge chunks of the taxes they collect from you everyday for catering services (receptions), accommodation, gifts, food and drinks ?</p>
 <p>Since devolution started in 2013, counties have year on year been increasing their budget allocation for these services. </p>
-<p></p>
+
+<br/>
+<div style="background-image: url('/static/img/story/story_3.jpg'); height: 300px; width: 100%; background-size: cover; background-repeat: no-repeat; background-position: center center;"></div>
+<br/>
+
 <p>In April 2013, 300 Kidney patients sued the government for contravening their constitutional right to life by failing to buy dialysis machines to meet the demand. According to WHO estimates, one in every five men and one in every four women aged between 65 and 74 years have chronic kidney disease. The Ministry of Health notes that 10,000 cases of kidney disease are diagnosed annually.</p>
 <p>A cursory look at the tenders requesting for the supply of these goods and services indicate that there seems to be no guideline or limits as to what these services should require. Some of the counties seem frugal in their allocations while others seem quite extravagant.</p>
 <p>For example, in 2014/15 Bungoma county had allocated Sh332 as its hospitality budget which is nearly four times the total budget of West Pokot county. Bungoma’s allocation was even more than Nairobi which allocated Sh98m for hospitality in the same year. Murang’a’s allocation of Sh4 million compares favourably to Busia county which has indicated it intends to spend Sh11 million in the 2016-2017 financial year.</p>
