--- a/bi/templates/story2.html
+++ b/bi/templates/story2.html
@@ -10,6 +10,11 @@
 <p> Eight out of every ten people are at risk of catching Malaria.  On average, a malaria-stricken family spends an estimated quarter of its income on malaria treatment not only on medication but also due to loss of income. </p>
 <p> The most effective and most commonly prescribed  medication for the treatment of uncomplicated Malaria is Artemisinin- based combination therapies (ACTS) which cost between Sh200 and Sh250 for an adult treatment dose. </p>
 <p> At least 1 million adults who are sick with Malaria would be treated if the Sh241.9 million being spent hospitality/catering by counties was spent on buying Malaria drugs.</p>
+
+<br/>
+<div style="background-image: url('/static/img/story/story_2.jpg'); height: 300px; width: 100%; background-size: cover; background-repeat: no-repeat; background-position: center center;"></div>
+<br/>
+
 <p> According to UNICEF estimates, Malaria afflicted families can only harvest 40 per cent of the crops harvested by healthy families. And as many as 60 per cent of the children in Malaria endemic counties miss school due to absenteeism caused by repeated bouts of malaria.</p>
 <p> It accounts for 30- 50 per cent of all outpatient attendance and 20 per cent of all admissions. The Ministry of Health estimates that at least 170 million working days are lost every year due to the disease. </p>
 <p> The amount could also buy  insecticide treated nets which can help prevent  29,000 people including children and pregnant women from catching Malaria. The universal use of insecticide-treated bed-nets has been found to reduce episodes of illness by 50%. </p>
