--- a/bi/templates/story4.html
+++ b/bi/templates/story4.html
@@ -7,9 +7,14 @@
 
 {% block story_content %}
 
-<p> Nearly one in three persons newly infected with HIV is a teenager or youth, aged between 15-24 years.  </p>
-<p> Every day, 800 people get infected. They join the ranks of the 1.6 million who are living with the disease.  </p>
+<p> Nearly one in three persons newly infected with HIV is a teenager or youth, aged between 15-24 years.</p>
+<p> Every day, 800 people get infected. They join the ranks of the 1.6 million who are living with the disease.</p>
 <p> While most of those who find out their HIV-positive status go ahead to seek life-saving antiretroviral therapy treatment, not many of them are able to afford the cost of the ARVs which can prolong their lives. </p>
+
+<br/>
+<div style="background-image: url('/static/img/story/story_4.jpg'); height: 300px; width: 100%; background-size: cover; background-repeat: no-repeat; background-position: center center;"></div>
+<br/>
+
 <p> The cost of the the life-saving drugs recommended by the WHO cost between Sh61,000 and Sh105,000 per person per year (for originals) while generics cost between Sh21,000 and Sh26,000 per person per year.  </p>
 <p> This is too expensive for many of those who are HIV-infected. As it is, only a quarter of the children who need the drugs to stay alive are receiving the medicines.  </p>
 <p> On average, it  is <a href="http://www.standardmedia.co.ke/article/2000208945/sustainable-financing-for-hiv-is-possible">costing the government</a> $200 per person per year to deliver generics ARV to the 940,000 HIV enrolled in the ARV programme.  </p>
