--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,10 +31,14 @@
         <link rel="stylesheet" href="/css/main.css">
 
         <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/select2-bootstrap.css">
         <link rel="stylesheet" href="/css/style.css">
 
+        {% for stylesheet in page.stylesheets %}
+            <link rel="stylesheet" href="{{ stylesheet }}">
+        {% endfor %}
 
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -48,9 +52,13 @@
         <script>window.jQuery || document.write('<script src="https://code.jquery.com/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="/js/plugins.js"></script>
 
-        <script src="/js/vendor/bootstrap.min.js"></script>
-        <script src="/js/vendor/underscore-min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script src="/js/vendor/pym.js"></script>
+
+        {% for javascript in page.javascripts %}
+            <script src="{{ javascript }}"></script>
+        {% endfor %}
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
