--- a/css/style.scss
+++ b/css/style.scss
@@ -57,15 +57,12 @@ $colors-list: $blue $lightblue $red $darkblue $green-one $teal $green-two $green
 
 
 html, body {
-  background-color: $blue;
-  color: #fff;
   font-family: 'Poppins', sans-serif;
 
   a {
-    color: #fff;
     text-decoration: underline;
     &:hover {
-      color: $lightblue;
+      // color: $lightblue;
     }
   }
 
