Fix Facebook sharing.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="" id="twtbtn" class="twitter-hashtag-button" data-size="large" data-url="{{ site.url }}">Tweet #BiscuitIndex</a></li> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-        <li><div class="fb-share-button" data-href="{{ site.url }}" data-layout="button" data-size="large" data-mobile-iframe="true" style="line-height:15px;"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}&amp;src=sdkpreparse">Share</a></div></li>
+        <li><div class="fb-share-button" data-href="https://biscuitindex.codeforkenya.org/" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fbiscuitindex.codeforkenya.org%2F&amp;src=sdkpreparse">Share</a></div></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
